common/istio/setup/ingress-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-ingress
spec:
  selector:
    function: ingress-gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.glythium.io"
    - "*.glythium.com"
  - port:
      number: 443
      name: https
      protocol: TCP
    hosts:
    - "*.glythium.io"
    - "*.glythium.com"
